
BUG: when there are commas in text labels, animint.js does not parse
the CSV correctly. See examples/align_rect_text.R.

BUG: Why doesn't animation work in the last plot of this example?
https://github.com/vdimarco/dojo1/blob/master/hocking-canada-cities-viz.R

Test SVG output after applying JavaScript? Is there some way we can
apply the JavaScript non-interactively and then check the results?
http://phantomjs.org/ or in R http://www.omegahat.org/SpiderMonkey/

customizable alpha/color/size/fill/linetype for selected geoms, using
selected.alpha, selected.color, etc aesthetics, see
examples/Climate-selected.R. The first implementation should only
allow this at the geom level,
e.g. geom_point(aes(clickSelects=var),selected.color="red") means to
plot a bunch of points which are black if not selected and red if
selected. In ggplot2-0.9.3.1, selected.color thus defined can be
accessed as layer$stat_params$selected.color. In the future we can try
an implementation at the aes level,
e.g. geom_point(aes(clickSelects=var1,selected.color=var2)) means
black if not selected and scale[var2] if selected. NOTE: should
maintain compatibility with existing code, which assumes
selected.color="black" and color="transparent" for
e.g. geom_rect(aes(fill=numeric, clickSelects=id)) and otherwise,
selected.alpha=1 and alpha=1/2.

Why does it take so much memory to compile large data? e.g.
examples/vervet.R.

Profile gg2animint() to see what part is slow, and speed it up!

Custom titles for the generated HTML page.

Include SEVERAL d3 plots directly in knitr html output e.g.
http://zvfak.blogspot.jp/2013/08/using-javascript-visualization.html

gg2gist(L) uploads animint as a gist to github.

facets -- would be useful when we want to align axes in related plots,
e.g. the last plot of examples/intreg.R. To implement facets it may be
useful to use "margin convention" http://bl.ocks.org/mbostock/3019563

coord_equal -- would be useful for maps e.g. examples/Tornadoes.R.
